examples/test/testpolicy13267.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13267
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key38: value2
      key34: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value30
          key16: value36
          key5: value18
      podSelector:
        matchLabels:
          key13: value44
